# tools

./: .bazelrc  .pre-commit-config.yaml  BUILD  Cargo.toml  MODULE.bazel  Makefile  README.md  requirements.in  requirements.out
aaltomuoto/: BUILD  aaltomuoto.py
add-to-playlist/: BUILD  add-to-playlist.c
alafont/: BUILD  Cargo.toml
alafont/src/: main.rs
ansible/tasks/: debian_build_podman.yml
bazel/: BUILD  local-deploy.bzl  rust.bzl
containers/: README.md
containers/cargo-zigbuild-libav-ffmpeg/: Containerfile
containers/mysql-and-elastic/: README.md  podman-compose.yml
diffamer/: BUILD  Cargo.toml
diffamer/src/: main.rs
diggah/: BUILD  README.md  diggah.py  pyrightconfig.json
f2aif/: BUILD  Cargo.toml  f2aif.py
f2aif/src/: main.rs
gotcha/: BUILD  Cargo.toml
gotcha/src/: main.rs
hack/: git-diff-upstream
hakunadata/: BUILD  Cargo.toml  README.md
hakunadata/src/: context.rs  main.rs  tagging.rs
hakunadata/src/fetchers/: discogs.rs  mod.rs  musicbrainz.rs
hakunadata/src/metadata/: fetch.rs  genres.rs  labels.rs  mod.rs  subgenres.rs
khal_notifier/: .gitignore  BUILD  Makefile  README.md  khal_notifier.service  khal_notifier.timer  mix.exs
khal_notifier/lib/: BUILD  khal_notifier.ex
lastfm-csv-export/: BUILD  Cargo.toml  README.md
lastfm-csv-export/src/: main.rs
lazymaster/: BUILD  README.md  lazymaster.py
mack/: BUILD  Cargo.toml  README.md
mack/src/: config.rs  main.rs  prompt.rs  util.rs
mack/src/track/: feat.rs  fixers.rs  loader.rs  mod.rs  rename.rs
magnolia/: BUILD  Cargo.toml  LICENSE  README.md  todo.md
magnolia/db/: init
magnolia/shell/: magnolia  magnolia.zsh
magnolia/src/: cli.rs  interactive.rs  main.rs  models.rs
magnolia/src/db/: mod.rs  queries.rs  utils.rs
nix/amen/: flake.nix  tools.nix
nts/: BUILD  nts.py
ntsgui/: BUILD  build.zig  build.zig.zon  extension.bzl
ntsgui/src/: main.zig  nts.zig
plants-client/: BUILD  Cargo.toml
plants-client/src/: main.rs
plants-common/: BUILD  Cargo.toml
plants-common/src/: lib.rs  output.rs  status.rs
plants-daemon/: BUILD  Cargo.toml
plants-daemon/src/: airpods.rs  airpods_consts.rs  bluetooth.rs  config.rs  daemon_impl.rs  main.rs  pbp.rs  pbp_client.rs
plants-daemon/src/packets/: battery.rs  in_ear.rs  metadata.rs  mod.rs
river/: .gitignore  get-river-title-build.sh  get-river-title.c  river-status.c  river-status.h
scores/: BUILD  Cargo.toml  README.md
scores/src/: main.rs
scripts/singlefile-sync/: BUILD  singlefile-sync.sh  singlefile.json
shuffle/: BUILD  shuffle.py
singlefile-sync/: BUILD  singlefile-sync.service
speediness/: BUILD  build.zig  build.zig.zon
speediness/src/: main.zig
tempfox/: user.js
terraform/: .gitignore  .terraform.lock.hcl  main.tf  repositories.tf
terraform/github/: main.tf  output.tf  variables.tf
terraform/hack/: import-into-state  tfvars-from-pass
todo/: README.md  todo
todo/.ne/: .keys  insert-todo  replace-todo-with-done
virittaa/: BUILD  Cargo.toml  Makefile.toml  README.md
virittaa/src/: main.rs
zsh/twitch/: README.md  channels  twitch
