module(
    name = "tools",
)

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_python", version = "1.8.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# https://github.com/bazelbuild/rules_rust
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")

rust.toolchain(
    edition = "2024",
    extra_rustc_flags = [
        "-Zunstable-options",
        "-Ctarget-cpu=native",
        "-Clink-arg=-fuse-ld=mold",
    ],
    versions = ["nightly/2026-01-20"],
    extra_target_triples = [],
)
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:rust_linux_x86_64__x86_64-unknown-linux-gnu__nightly",
)

crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:alafont/Cargo.toml",
        "//:diffamer/Cargo.toml",
        "//:f2aif/Cargo.toml",
        "//:gotcha/Cargo.toml",
        "//:hakunadata/Cargo.toml",
        "//:mack/Cargo.toml",
        "//:scores/Cargo.toml",
        "//:virittaa/Cargo.toml",
    ],
)
use_repo(crate, "crates")

# https://github.com/bazel-contrib/rules_python
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

python.toolchain(
    python_version = "3.14",
)

pip.parse(
    hub_name = "pypi",
    python_version = "3.14",
    requirements_lock = "//:requirements.out",
)
use_repo(pip, "pypi")
