[package]
name = "hakunadata"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
lofty = "0.22.4"
reqwest = { version = "0.13", features = ["json", "native-tls", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
url = "2.5"
walkdir = "2"
