[package]
name = "mack"
version = "1.5.0"
edition = "2024"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "An opinionated, fast music organiser."
repository = "https://github.com/cdown/mack"
readme = "README.md"
keywords = ["music", "audio", "organiser", "tagging", "mp3"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT"

[dependencies]
clap = { version = "4.5.54", features = ["std", "derive", "help"], default-features = false }
regex = "1.12.2"
anyhow = "1.0.100"
lofty = "0.22.4"
funcfmt = "0.3.0"
cow-utils = "0.1.3"
rayon = "1.11.0"
jwalk = "0.8.1"
libc = "0.2.180"
