[package]
name = "plants-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "plants"
path = "src/main.rs"

[dependencies]
plants-common = { path = "../plants-common", package = "plants-common" }
anyhow = "1.0.98"
futures = "0.3.31"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "time", "process", "io-util", "sync", "fs", "net"] }
zbus = { version = "5.9.0", features = ["option-as-array"] }
serde_json = "1.0.141"
clap = { version = "4.5", features = ["derive"] }
