[package]
name = "plants-daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "plants-daemon"
path = "src/main.rs"

[dependencies]
common = { path = "../plants-common", package = "plants-common" }
anyhow = "1.0.98"
bluer = { version = "0.17.4", features = ["bluetoothd", "rfcomm"] }
futures = "0.3.31"
regex = "1.10.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "time", "process", "io-util", "sync", "fs", "net"] }
toml = "0.9.11"
zbus = { version = "5.9.0", features = ["option-as-array"] }
maestro = { git = "https://github.com/qzed/pbpctrl" }
uuid = { version = "=1.19.0", features = ["v4", "macro-diagnostics"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive"] }
