[package]
name = "virittaa"
version = "0.1.0"
edition = "2024"

[dependencies]
bliss-audio = { version = "0.11.2", features = ["bench"] }
bliss-audio-aubio-rs = "0.2.4"
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
noisy_float = "0.2.0"
anyhow = "1.0.45"
clap = { version = "4.5.35", features = ["derive"] }
walkdir = "2.5"
lofty = "0.22.4"
rayon = "1.10"
jemallocator = "0.5"
indicatif = "0.17.11"
chrono = "0.4.43"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
